root/apps/web/qadmin/service.yaml
apiVersion: v1
kind: Service
metadata: { name: qadmin, namespace: web }
spec:
  selector: { app: qadmin }
  ports: [ { port: 80, targetPort: 80 } ]
  type: ClusterIP
