root/apps/web/qadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qadmin-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [ "qadmin.preprod.qoffice.cloud" ]
      secretName: qadmin-tls
  rules:
    - host: qadmin.preprod.qoffice.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: qadmin, port: { number: 80 } } }
